2011-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdint.h:
	  Added typedefs for 64-bit integer types.

2011-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCCval.c:
	  Error for invalid integer suffix, as in 1ullul.

2011-10-01 Raphael Neider <rneider AT web.de>

	* device/non-free/include/pic14/pic12f1822.h,
	  device/non-free/lib/pic14/libdev/pic12f1822.c,
	  device/include/pic14/pic14devices.txt,
	  device/lib/pic14/libdev/devices.txt:
	  Add support for 12f1822 devices, requires --enable-new-pics to be
	  passed to configure, closes #3416092.

	* device/non-free/lib/pic14/libdev/Makefile.in,
	  device/non-free/lib/pic14/configure.in:
	  Add --enable-new-pics switch to build device libs for devices added
	  to gputils only after the 0.13.7 release; by default, only libs for
	  devices that are supported in gputils 0.13.7 are built to avoid build
	  failures.

	* device/non-free/lib/pic14/configure:
	  Regenerated.

2011-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Slightly more informative error message when attempting to multiply, etc long long.

2011-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Reorganized pointer access functions, fixed the remaining warning in the z80 port.

2011-09-01 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCerr.c, src/SDCCerr.h, src/SDCC.lex:
	  SDCCerr code cleanup

2011-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Reorganized pointer access functions, fixed the remaining warning in the z80 port.

2011-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c:
	  Enable long long for gbz80 and z180 ports.
	* src/pic14/gen.c:
	  Fixed use of pic16 functions in pic14 port.

2011-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/src/izt/tlcs900h.c,
	  src/izt/i186.c,
	  src/z80/main.c:
	  Added missing long long type size entries.

2011-10-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
